# portfolia-backend

./: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: tests.yml
api/: README.md  main.py
app/api/chat/: route.ts
app/components/hooks/: useChat.ts
assistant/core/: rag_factory.py
assistant/flows/node_logic/: stage2_role_routing.py  stage6_action_planning.py  stage7_action_execution.py  util_links.py
data/: career_kb.csv
supabase/migrations/: 003_fix_session_id_type.sql  004_analytics_helpers.sql  005_crush_confessions_table.sql  006_recruiter_leads_table.sql  007_add_referral_source_to_recruiter_leads.sql  008_conversation_analytics.sql  009_fix_match_kb_chunks_type.sql  APPLIED.md  README.md
supabase/migrations/archive/: CLEAN_MIGRATION.sql  SIMPLE_MIGRATION.sql
tests/: test_api_guards.py  test_documentation_alignment.py  test_intent_routing.py  test_portfolia_eval.py  test_quality_gates.py  test_retrieval_fallback.py
